Minor fixes to home page

--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
 										<i class="fa fa-ambulance"></i>
 									</div>
 									<div class="single-content">
-										<h4>Proven Adherence Improvement</h4>
-										<p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
+										<h4>Proven<br><br>Adherence Improvement</h4>
 									</div>
 								</div>
 							</div>
@@ -223,8 +222,7 @@
 										<i class="icofont-prescription"></i>
 									</div>
 									<div class="single-content">
-										<h4>Zero Patient Burden</h4>
-										<p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
+										<h4>Zero<br><br>Patient Burden</h4>
 									</div>
 								</div>
 							</div>
@@ -237,8 +235,7 @@
 										<i class="icofont-ui-clock"></i>
 									</div>
 									<div class="single-content">
-										<h4>Payer-Informed Business Model</h4>
-										<p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
+										<h4>Payer-Informed<br><br>Business Model</h4>
 									</div>
 								</div>
 							</div>
