Fixed top navigation links.

--- a/about.html
+++ b/about.html
@@ -110,13 +110,13 @@
 								<div class="main-menu">
 									<nav class="navigation">
 										<ul class="nav menu">
-											<li class="active"><a href="index.html">Home</a>
+											<li><a href="index.html">Home</a>
 												<!-- <ul class="dropdown">
 													<li><a href="index.html">Home Page 1</a></li>
 												</ul> -->
 											</li>
 											<li><a href="product.html">Product</a></li>
-											<li><a href="#">About Us</a></li>
+											<li class="active"><a href="#">About Us</a></li>
 											<!-- <li><a href="#">Product </a></li> -->
 											<!-- <li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
