--- a/product.html
+++ b/product.html
@@ -120,7 +120,7 @@
 											</li>
 											<!-- <li><a href="#">Doctos </a></li> -->
 											<li  class="active"><a href="product.html">Product </a></li>
-											<li><a href="#">About Us </a></li>
+											<li><a href="about.html">About Us</a></li>
 											<!-- <li><a href="#">Product </a></li> -->
 											<!-- <li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
