--- a/product.html
+++ b/product.html
@@ -125,6 +125,17 @@
 			</div>
 			<!--/ End Header Inner -->
 		</header>
+
+		<section class="bg-white py-16 px-4 text-center shadow">
+		<div class="row">
+			<div class="col-12">
+				<p class="italic mt-4 text-lg text-gray-700" style="font-size: 32px">
+					“Medicine only works if people take it.”<br>
+					<span class="text-sm text-gray-500">— U.S. Surgeon General</span>
+				</p>
+			</div>
+		</div>
+		</section>
 		<!-- Breadcrumbs -->
 		<div class="breadcrumbs overlay">
 			<div class="container">
@@ -132,6 +143,8 @@
 					<div class="row">
 						<div class="col-12">
 							<h2>Adee™</h2>
+							<h3 class="mt-6 mb-6 text-white">by</h3>
+							<h2>MedAdhere AI</h2>
 							<!-- <ul class="bread-list">
 								<li><a href="index.html">Home</a></li>
 								<li><i class="icofont-simple-right"></i></li>
@@ -147,10 +160,12 @@
 
 		<section class="bg-white py-16 px-4 text-center shadow">
 			<h1 class="text-4xl font-bold text-blue-800">Adee by MedAdhere AI</h1>
+<!--
 			<p class="italic mt-4 text-lg text-gray-700">
 			  “Medicine only works if people take it.”<br>
 			  <span class="text-sm text-gray-500">— U.S. Surgeon General</span>
 			</p>
+-->
 			<p class="mt-6 text-lg max-w-2xl mx-auto text-gray-600">
 			  MedAdhere’s <strong>Adee</strong> platform is uniquely designed to deliver proven results with:
 			</p>
