Tweaks to home page

--- a/index.html
+++ b/index.html
@@ -120,11 +120,38 @@
 			<!--/ End Header Inner -->
 		</header>
 		<!-- End Header Area -->
-		
+
+		<section class="bg-white py-16 text-center shadow">
+<!--			<div class="" style="background-color: #459b79;">-->
+			<div class="" style="background-color: #E8E8E8;">
+				<div class="container" style="margin-top: 20px; margin-bottom: 40px; padding-top: 40px; padding-bottom: 40px">
+					<div class="bread-inner">
+						<div class="row">
+							<div class="col-6" style="text-align: left;">
+								<h2>Introducing MedAdhere AI</h2>
+								<h3><br/></h3>
+								<h4>Frictionless medication adherence solution to deliver near-term savings in hospitalization costs</h4>
+								<!-- <ul class="bread-list">
+									<li><a href="index.html">Home</a></li>
+									<li><i class="icofont-simple-right"></i></li>
+									<li class="active">Blog Single</li>
+								</ul> -->
+							</div>
+							<div class="col-6" style="text-align: left;">
+								<img src="img/patient_record.png" alt="MedAdhere Logo">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
 		<!-- Slider Area -->
+<!--
 		<section class="slider">
 			<div class="hero-slider">
-				<!-- Start Single Slider -->
+				&lt;!&ndash; Start Single Slider &ndash;&gt;
 				<div class="single-slider" style="background-image:url('img/slider2.jpg')">
 					<div class="container">
 						<div class="row">
@@ -132,23 +159,23 @@
 								<div class="text">
 									<h1><span>Frictionless</span> Medication Adherence</h1>
 									<p style="font-size: 22px;">Smart Device reports medication-taking behavior in real-time</p>
-<!--
+&lt;!&ndash;
 									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
--->
-<!--									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>-->
-<!--
+&ndash;&gt;
+&lt;!&ndash;									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>&ndash;&gt;
+&lt;!&ndash;
 									<div class="button">
 										&lt;!&ndash; <a href="#" class="btn">Get Appointment</a> &ndash;&gt;
 										<a href="#" class="btn primary">Learn More</a>
 									</div>
--->
+&ndash;&gt;
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<!-- End Single Slider -->
-				<!-- Start Single Slider -->
+				&lt;!&ndash; End Single Slider &ndash;&gt;
+				&lt;!&ndash; Start Single Slider &ndash;&gt;
 				<div class="single-slider" style="background-image:url('img/slider.jpg')">
 					<div class="container">
 						<div class="row">
@@ -156,21 +183,21 @@
 								<div class="text">
 									<h1><span>Frictionless</span> Medication Adherence</h1>
 									<p style="font-size: 22px;">Activity patterns are analyzed and compared to prescription</p>
-<!--									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>-->
-<!--									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>-->
-<!--
+&lt;!&ndash;									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>&ndash;&gt;
+&lt;!&ndash;									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>&ndash;&gt;
+&lt;!&ndash;
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
 										<a href="#" class="btn primary">About Us</a>
 									</div>
--->
+&ndash;&gt;
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<!-- Start End Slider -->
-				<!-- Start Single Slider -->
+				&lt;!&ndash; Start End Slider &ndash;&gt;
+				&lt;!&ndash; Start Single Slider &ndash;&gt;
 				<div class="single-slider" style="background-image:url('img/slider3.jpg')">
 					<div class="container">
 						<div class="row">
@@ -178,31 +205,33 @@
 								<div class="text">
 									<h1><span>Frictionless</span> Medication Adherence</h1>
 									<p style="font-size: 22px;">Automated SMS messaging intervenes to improve adherence and identify individual barriers</p>
-<!--									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>-->
-<!--									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>-->
-<!--
+&lt;!&ndash;									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>&ndash;&gt;
+&lt;!&ndash;									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>&ndash;&gt;
+&lt;!&ndash;
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
 										<a href="#" class="btn primary">Conatct Now</a>
 									</div>
--->
+&ndash;&gt;
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<!-- End Single Slider -->
+				&lt;!&ndash; End Single Slider &ndash;&gt;
 			</div>
 		</section>
+-->
 		<!--/ End Slider Area -->
 		
 		<!-- Start Schedule Area -->
+<!--
 		<section class="schedule">
 			<div class="container">
 				<div class="schedule-inner">
 					<div class="row">
 						<div class="col-lg-4 col-md-6 col-12 ">
-							<!-- single-schedule -->
+							&lt;!&ndash; single-schedule &ndash;&gt;
 							<div class="single-schedule first">
 								<div class="inner">
 									<div class="icon">
@@ -215,7 +244,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6 col-12">
-							<!-- single-schedule -->
+							&lt;!&ndash; single-schedule &ndash;&gt;
 							<div class="single-schedule middle">
 								<div class="inner">
 									<div class="icon">
@@ -228,7 +257,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-12 col-12">
-							<!-- single-schedule -->
+							&lt;!&ndash; single-schedule &ndash;&gt;
 							<div class="single-schedule last">
 								<div class="inner">
 									<div class="icon">
@@ -244,7 +273,21 @@
 				</div>
 			</div>
 		</section>
+-->
 		<!--/End Start schedule Area -->
+
+		<section class="Feautes section">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="section-title">
+							<h2>Mission</h2>
+							<p style="font-size: 24px;">Reduce unnecessary hospitalizations by using real-time data and our platform, Adee’s, intelligence to influence medication taking behavior.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- Start Feautes -->
 		<section class="Feautes section">
