--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 								</ul> -->
 							</div>
 							<div class="col-6" style="text-align: left;">
+								<p style="text-align: center;">Adherence Record</p>
 								<img src="img/patient_record.png" alt="MedAdhere Logo">
 							</div>
 						</div>
@@ -276,7 +277,7 @@
 -->
 		<!--/End Start schedule Area -->
 
-		<section class="Feautes section">
+		<section class="Feautes section" style="padding-bottom: 10px">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
