--- a/product.html
+++ b/product.html
@@ -126,6 +126,81 @@
 			<!--/ End Header Inner -->
 		</header>
 
+				<!-- Slider Area -->
+
+		<section class="slider">
+			<div class="hero-slider">
+		
+				<div class="single-slider" style="background-image:url('img/cover1.jpg')">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-7">
+								<div class="text">
+									<h1><span>Frictionless</span> Medication Adherence</h1>
+									<p style="font-size: 22px;">Smart Device reports medication-taking behavior in real-time</p>
+		
+									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
+		
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque,
+										faucibus libero eu, gravida quam. </p>
+		
+		
+		
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+		
+				<div class="single-slider" style="background-image:url('img/cover2.jpg')">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-7">
+								<div class="text">
+									<h1><span>Frictionless</span> Medication Adherence</h1>
+									<p style="font-size: 22px;">Activity patterns are analyzed and compared to prescription</p>
+									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
+							
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque,
+										faucibus libero eu, gravida quam. </p>
+		
+		
+		
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+		
+				<div class="single-slider" style="background-image:url('img/slider3.jpg')">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-7">
+								<div class="text">
+									<h1><span>Frictionless</span> Medication Adherence</h1>
+									<p style="font-size: 22px;">Automated SMS messaging intervenes to improve adherence and
+										identify individual barriers</p>
+									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
+								
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque,
+										faucibus libero eu, gravida quam. </p>
+		
+									<!-- <div class="button">
+												<a href="#" class="btn">Get Appointment</a>
+												<a href="#" class="btn primary">Conatct Now</a>
+											</div> -->
+		
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+		
+			</div>
+		</section>
+
+		<!--/ End Slider Area
+
 		<section class="bg-white py-16 px-4 text-center shadow">
 		<div class="row">
 			<div class="col-12">
