--- a/product.html
+++ b/product.html
@@ -138,6 +138,24 @@
     </div>
 </section>
 
+<section class="bg-white py-16 px-4 text-center shadow">
+    <h1 class="text-4xl font-bold text-blue-800">Adee by MedAdhere AI</h1>
+    <!--
+                <p class="italic mt-4 text-lg text-gray-700">
+                  “Medicine only works if people take it.”<br>
+                  <span class="text-sm text-gray-500">— U.S. Surgeon General</span>
+                </p>
+    -->
+    <p class="mt-6 text-lg max-w-2xl mx-auto text-gray-600">
+        MedAdhere’s <strong>Adee</strong> platform is uniquely designed to deliver proven results with:
+    </p>
+    <ul class="mt-6 text-blue-800 font-medium space-y-2 text-lg">
+        <li>✔ Zero patient burden</li>
+        <li>✔ Proven adherence improvement</li>
+        <li>✔ Payer-informed business model</li>
+    </ul>
+</section>
+
 
 <!-- Slider Area -->
 
@@ -216,6 +234,15 @@
     </div>
 </section>
 
+<section class="bg-white py-16 px-4 text-center shadow">
+    <h2 class="text-4xl font-bold text-blue-800">We don’t need new medications – we need to help people take the medications they already have.</h2>
+<!--
+    <p class="mt-6 text-lg max-w-2xl mx-auto text-gray-600">
+        We don’t need new medications – we need to help people take the medications they already have.
+    </p>
+-->
+\</section>
+
 <!-- End Slider Area -->
 
 <!-- Breadcrumbs -->
@@ -242,25 +269,8 @@
 <!-- End Breadcrumbs -->
 
 
-<section class="bg-white py-16 px-4 text-center shadow">
-    <h1 class="text-4xl font-bold text-blue-800">Adee by MedAdhere AI</h1>
-    <!--
-                <p class="italic mt-4 text-lg text-gray-700">
-                  “Medicine only works if people take it.”<br>
-                  <span class="text-sm text-gray-500">— U.S. Surgeon General</span>
-                </p>
-    -->
-    <p class="mt-6 text-lg max-w-2xl mx-auto text-gray-600">
-        MedAdhere’s <strong>Adee</strong> platform is uniquely designed to deliver proven results with:
-    </p>
-    <ul class="mt-6 text-blue-800 font-medium space-y-2 text-lg">
-        <li>✔ Zero patient burden</li>
-        <li>✔ Proven adherence improvement</li>
-        <li>✔ Payer-informed business model</li>
-    </ul>
-</section>
-
 <!-- How It Works -->
+<!--
 <section class="bg-blue-50 py-16 px-6">
     <h2 class="text-3xl font-bold text-center text-blue-900 mb-12">How It Works</h2>
     <div class="max-w-5xl mx-auto space-y-10">
@@ -283,8 +293,10 @@
         </div>
     </div>
 </section>
+-->
 
 <!-- Adee Meets Patients -->
+<!--
 <section class="bg-white py-16 px-6">
     <h2 class="text-3xl font-bold text-center text-blue-900 mb-8">Adee Meets Patients Where They Are</h2>
     <p class="max-w-4xl mx-auto text-center text-lg text-gray-700 mb-10">
@@ -303,6 +315,7 @@
         </div>
     </div>
 </section>
+-->
 
 <!-- Proven Results -->
 <section class="bg-blue-100 py-16 px-6">
