Added Kristine to leadership page

--- a/about.html
+++ b/about.html
@@ -184,7 +184,16 @@
                   Successful exits include Diversified Pharmaceutical Services sold to SmithKline Beecham, PatientKeeper sold to HCA, and QOLMeds sold to Nautic</p>
               </div>
           </div>
-  
+
+          <div class="member-card">
+              <img src="./img/headshots/kristine.png" alt="Kristine Jarvis">
+              <div class="member-info">
+                  <h3>Kristine Jarvis</h3>
+                  <p></p>
+                  Kristine Jarvis is a results-driven executive with 15 years of experience transforming complex organizations into high-performing enterprises through strategic execution and operational excellence.  She has held senior leadership roles at Grant Thornton, Blue Shield of California, and Sutter Health.</p>
+              </div>
+          </div>
+
       </div>
 
         <br/>
