More work on product page

--- a/product.html
+++ b/product.html
@@ -139,21 +139,28 @@
 </section>
 
 <section class="bg-white py-16 px-4 text-center shadow">
-    <h1 class="text-4xl font-bold text-blue-800">Adee by MedAdhere AI</h1>
-    <!--
-                <p class="italic mt-4 text-lg text-gray-700">
-                  “Medicine only works if people take it.”<br>
-                  <span class="text-sm text-gray-500">— U.S. Surgeon General</span>
-                </p>
-    -->
-    <p class="mt-6 text-lg max-w-2xl mx-auto text-gray-600">
-        MedAdhere’s <strong>Adee</strong> platform is uniquely designed to deliver proven results with:
-    </p>
-    <ul class="mt-6 text-blue-800 font-medium space-y-2 text-lg">
-        <li>✔ Zero patient burden</li>
-        <li>✔ Proven adherence improvement</li>
-        <li>✔ Payer-informed business model</li>
-    </ul>
+	<div class="row">
+		<div class="col-2">
+			<img src="img/bottle_filled.png" alt="">
+		</div>
+		<div class="col-10">
+			<h1 class="text-4xl font-bold text-blue-800">Adee by MedAdhere AI</h1>
+			<!--
+                        <p class="italic mt-4 text-lg text-gray-700">
+                          “Medicine only works if people take it.”<br>
+                          <span class="text-sm text-gray-500">— U.S. Surgeon General</span>
+                        </p>
+            -->
+			<p class="mt-6 text-lg max-w-2xl mx-auto text-gray-600">
+				MedAdhere’s <strong>Adee</strong> platform is uniquely designed to deliver proven results with:
+			</p>
+			<ul class="mt-6 text-blue-800 font-medium space-y-2 text-lg">
+				<li>✔ Zero patient burden</li>
+				<li>✔ Proven adherence improvement</li>
+				<li>✔ Payer-informed business model</li>
+			</ul>
+		</div>
+	</div>
 </section>
 
 
