product carousel size reduced, bottle alligned with text

--- a/product.html
+++ b/product.html
@@ -140,10 +140,10 @@
 
 <!-- Slider Area -->
 
-<section class="slider">
-    <div class="hero-slider">
+<section class="slider" >
+    <div class="hero-slider" >
 
-        <div class="single-slider" style="background-image:url('img/cover1.jpg')">
+        <div class="single-slider" style="background-image:url('img/slider.jpg');">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
@@ -216,18 +216,18 @@
 </section>
 
 <section class="bg-white py-16 px-4 text-center shadow">
-	<div class="row">
-		<div class="col-2">
-			<img src="img/bottle_filled.png" alt="">
+	<div class="row items-center">
+		<div class="col-3 text-right">
+			<img src="img/bottle_filled.png" alt="" class="inline-block">
 		</div>
-		<div class="col-10">
+		<div class="col-9">
 			<h1 class="text-4xl font-bold text-blue-800">Adee by MedAdhere AI</h1>
 			<!--
-                        <p class="italic mt-4 text-lg text-gray-700">
-                          “Medicine only works if people take it.”<br>
-                          <span class="text-sm text-gray-500">— U.S. Surgeon General</span>
-                        </p>
-            -->
+			<p class="italic mt-4 text-lg text-gray-700">
+				“Medicine only works if people take it.”<br>
+				<span class="text-sm text-gray-500">— U.S. Surgeon General</span>
+			</p>
+			-->
 			<p class="mt-6 text-lg max-w-2xl mx-auto text-gray-600">
 				MedAdhere’s <strong>Adee</strong> platform is uniquely designed to deliver proven results with:
 			</p>
@@ -239,6 +239,7 @@
 		</div>
 	</div>
 </section>
+
 
 
 <section class="bg-white py-16 px-4 text-center shadow">
