More changes in website

--- a/about.html
+++ b/about.html
@@ -202,11 +202,11 @@
             </div>
         </div>
         <div class="member-card">
-            <img src="./img/headshots/malaika.png" alt="Dr. Malaika Stoll">
+            <img src="./img/headshots/malaika.png" alt="Malaika Stoll, MD">
             <div class="member-info">
-                <h3>Dr. Malaika Stoll</h3>
+                <h3>Malaika Stoll, MD</h3>
                 <p></p>
-                Dr. Malaika Stoll, MD is a board certified family physician in California and has held leadership positions at Blue Shield of California and Sutter Health.</p>
+                Malaika Stoll, MD is a board certified family physician in California and has held leadership positions at Blue Shield of California and Sutter Health.</p>
             </div>
         </div>
     </div>
@@ -232,6 +232,16 @@
                 <div class="member-info">
                     <h3>Kerry Bendel, RPh, CHIE</h3>
                     <p>Medical Advisor, Pharmacy<br>Vice President, Cambia Health Solutions</p>
+                </div>
+            </div>
+
+            <div class="member-card">
+                <img src="./img/headshots/rachel.png" alt="Rachel DeJesus">
+                <div class="member-info">
+                    <h3>Rachel DeJesus</h3>
+                    <p></p>
+                    <h3>Co-Founder</h3>
+                    <p>Healthcare executive - Strategy, Growth, and Development.  An entrepreneur, has help executive positions at SMRxT inc.</p>
                 </div>
             </div>
         </div>
