--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
 					<div class="bread-inner">
 						<div class="row">
 							<div class="col-6" style="text-align: left;">
-								<h2>Introducing MedAdhere AI</h2>
+								<h2>MedAdhere AI: The first fully automated, medication adherence solution with proven results</h2>
 								<h3><br/></h3>
-								<h4>Frictionless medication adherence solution to deliver near-term savings in hospitalization costs</h4>
+<!--								<h4>Frictionless medication adherence solution to deliver near-term savings in hospitalization costs</h4>-->
+								<h4>MedAdhere links directly to the medication bottle, offering a zero-burden solution that monitors real-time medication adherence and intervenes exactly when needed. By closing the medication adherence gap, MedAdhere dramatically improves patient health outcomes while significantly reducing the cost of short-term and long-term care.</h4>
 								<!-- <ul class="bread-list">
 									<li><a href="index.html">Home</a></li>
 									<li><i class="icofont-simple-right"></i></li>
@@ -202,6 +203,7 @@
 -->
 		<!--/End Start schedule Area -->
 
+<!--
 		<section class="Feautes section" style="padding-bottom: 10px">
 			<div class="container">
 				<div class="row">
@@ -209,6 +211,20 @@
 						<div class="section-title">
 							<h2>Mission</h2>
 							<p style="font-size: 24px;">Reduce unnecessary hospitalizations by using real-time data and our platform, Adee’s, intelligence to influence medication taking behavior.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+-->
+
+		<section class="Feautes section" style="padding-bottom: 10px">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="section-title">
+							<h2>“Drugs don’t work in patients who don’t take them.”</h2>
+							<p style="font-size: 24px;">Dr. C. Everett Koop. Former U.S. Surgeon General</p>
 						</div>
 					</div>
 				</div>
