--- a/product.html
+++ b/product.html
@@ -127,16 +127,16 @@
     <!--/ End Header Inner -->
 </header>
 
-<section class="bg-white py-2 px-4 text-center shadow">
-    <div class="row">
-        <div class="col-12">
-            <p class="italic mt-4 text-lg text-gray-700" style="font-size: 32px">
-                “Medicine only works if people take it.”<br>
-                <span class="text-sm text-gray-500">— U.S. Surgeon General</span>
-            </p>
-        </div>
-    </div>
-</section>
+<!--<section class="bg-white py-2 px-4 text-center shadow">-->
+<!--    <div class="row">-->
+<!--        <div class="col-12">-->
+<!--            <p class="italic mt-4 text-lg text-gray-700" style="font-size: 32px">-->
+<!--                “Medicine only works if people take it.”<br>-->
+<!--                <span class="text-sm text-gray-500">— U.S. Surgeon General</span>-->
+<!--            </p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
 
 <!-- Slider Area -->
 
@@ -148,7 +148,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="text">
-                            <h1><span>Frictionless</span> Medication Adherence</h1>
+                            <h1>Proven Medication Adherence</h1>
                             <p style="font-size: 22px;">Smart Device reports medication-taking behavior in real-time</p>
 
                             <!--									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>-->
@@ -170,7 +170,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="text">
-                            <h1><span>Frictionless</span> Medication Adherence</h1>
+                            <h1>Proven Medication Adherence</h1>
                             <p style="font-size: 22px;">Activity patterns are analyzed and compared to prescription</p>
                             <!--									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>-->
 
@@ -191,7 +191,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="text">
-                            <h1><span>Frictionless</span> Medication Adherence</h1>
+                            <h1>Proven Medication Adherence</h1>
                             <p style="font-size: 22px;">Automated SMS messaging intervenes to improve adherence and
                                 identify individual barriers</p>
                             <!--									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>-->
@@ -243,7 +243,10 @@
 
 
 <section class="bg-white py-16 px-4 text-center shadow">
-    <h2 class="text-4xl font-bold text-blue-800">We don’t need new medications – we need to help people take the medications they already have.</h2>
+    <h2 class="text-4xl font-bold text-blue-800">"We don’t need new medications – we need to help people take the medications they already have."</h2>
+    <div class="section-title">
+    	<p style="font-size: 24px; margin-top: 20px;">Mark Moeller, MD, dipABLM, Director, Foundational Health LLC</p>
+    </div>
 <!--
     <p class="mt-6 text-lg max-w-2xl mx-auto text-gray-600">
         We don’t need new medications – we need to help people take the medications they already have.
