--- a/about.html
+++ b/about.html
@@ -241,7 +241,7 @@
                     <h3>Rachel DeJesus</h3>
                     <p></p>
                     <h3>Co-Founder</h3>
-                    <p>Healthcare executive - Strategy, Growth, and Development.  An entrepreneur, has help executive positions at SMRxT inc.</p>
+                    <p>Healthcare executive - Strategy, Growth, and Development.  An entrepreneur, has held executive positions at SMRxT inc.</p>
                 </div>
             </div>
         </div>
