Some more tweaks

--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
                 <img src="./img/headshots/mark.png" alt="Mark Moeller">
                 <div class="member-info">
                     <h3>Mark Moeller, MD, dipABLM</h3>
-                    <p>Health Care Strategy Consultant<br>Director, Foundational Health LLC</p>
+                    <p>Business Strategy Consultant<br>CEO, Foundational Health LLC</p>
                 </div>
             </div>
 
