--- a/index.html
+++ b/index.html
@@ -232,58 +232,23 @@
 		</section>
 
 		<!-- Start Feautes -->
+<!--
 		<section class="Feautes section">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
 							<h2>MedAdhere is the first company to offer a seamless, fully automated solution with zero patient burden that monitors real-time medication adherence and intervenes exactly when needed</h2>
-<!--							<h2>We Are Always Ready to Help You & Your Family</h2>-->
+&lt;!&ndash;							<h2>We Are Always Ready to Help You & Your Family</h2>&ndash;&gt;
 							<img src="img/section-img.png" alt="#">
 							<p style="font-size: 18px;">MedAdhere’s patented platform results in significantly higher medication adherence, improving outcomes and lowering cost of care with an ROI of 4:1.</p>
-<!--							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>-->
+&lt;!&ndash;							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>&ndash;&gt;
 						</div>
 					</div>
 				</div>
-<!--
-				<div class="row">
-					<div class="col-lg-4 col-12">
-						&lt;!&ndash; Start Single features &ndash;&gt;
-						<div class="single-features">
-							<div class="signle-icon">
-								<i class="icofont icofont-ambulance-cross"></i>
-							</div>
-							<h3>Emergency Help</h3>
-							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
-						</div>
-						&lt;!&ndash; End Single features &ndash;&gt;
-					</div>
-					<div class="col-lg-4 col-12">
-						&lt;!&ndash; Start Single features &ndash;&gt;
-						<div class="single-features">
-							<div class="signle-icon">
-								<i class="icofont icofont-medical-sign-alt"></i>
-							</div>
-							<h3>Enriched Pharmecy</h3>
-							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
-						</div>
-						&lt;!&ndash; End Single features &ndash;&gt;
-					</div>
-					<div class="col-lg-4 col-12">
-						&lt;!&ndash; Start Single features &ndash;&gt;
-						<div class="single-features last">
-							<div class="signle-icon">
-								<i class="icofont icofont-stethoscope"></i>
-							</div>
-							<h3>Medical Treatment</h3>
-							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
-						</div>
-						&lt;!&ndash; End Single features &ndash;&gt;
-					</div>
-				</div>
--->
 			</div>
 		</section>
+-->
 		<!--/ End Feautes -->
 		
 		<!-- Start Fun-facts -->
