--- a/product.html
+++ b/product.html
@@ -245,7 +245,7 @@
 <section class="bg-white py-16 px-4 text-center shadow">
     <h2 class="text-4xl font-bold text-blue-800">"We don’t need new medications – we need to help people take the medications they already have."</h2>
     <div class="section-title">
-    	<p style="font-size: 24px; margin-top: 20px;">Mark Moeller, MD, dipABLM, Director, Foundational Health LLC</p>
+    	<p style="font-size: 24px; margin-top: 20px;">Mark Moeller, MD, dipABLM</p>
     </div>
 <!--
     <p class="mt-6 text-lg max-w-2xl mx-auto text-gray-600">
